<!--
Name: Karrar Mahmood
Student ID: n01641132
-->
<resources>

    <string name="app_name" translatable="false">TabsLayout</string>

    <!-- TAB TITLES -->
    <string name="tab1" translatable="false">TAB 1</string>
    <string name="tab2" translatable="false">TAB 2</string><![CDATA[

    ]]><!-- TAB 1 -->
    <string name="select_color">Select Color</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red" translatable="false">Red</string>
    <string name="other" translatable="false">Other</string>
    <string name="submit" translatable="false">Submit</string>

    <!-- TAB 2 -->
    <string name="no_data" translatable="false">NO DATA</string>
    <string name="hockey" translatable="false">Hockey</string>
    <string name="basketball" translatable="false">Basketball</string>
    <string name="baseball" translatable="false">Baseball</string>
    <string name="sport_btn" translatable="false">SPORT</string>

    <!-- ALERT DIALOG -->
    <string name="selected_sports" translatable="false">Selected Sports</string>
    <string name="no_sport" translatable="false">NO SPORT</string>
    <string name="ok" translatable="false">OK</string>

</resources>